<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">


    <EditText
        android:id="@+id/tagField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="16dp"
        android:hint="@string/Tag"
        android:inputType="textPersonName"
        android:background="@drawable/white_border"/>

    <EditText
        android:id="@+id/noteField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="16dp"
        android:hint="@string/Note"
        android:inputType="textPersonName"
        android:background="@drawable/white_border"/>

        <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/codigoField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/Código"
            android:inputType="number" />

        <EditText
            android:id="@+id/usuarioField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/Usuário"
            android:inputType="textPersonName" />

    </LinearLayout>
    -->
        <com.seatgeek.placesautocomplete.PlacesAutocompleteTextView
            android:id="@+id/autocomplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/Endereço"
            android:padding="16dp"
            android:background="@drawable/white_border"
            app:pacv_adapterClass="com.br.TestPlacesAutocompleteAdapter"
            app:pacv_clearEnabled="true"
            app:pacv_googleMapsApiKey="@string/google_maps_api_key"
            app:pacv_languageCode="en"
            app:pacv_resultType="no_type" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Salvar" />
        <!--

        <Button
            android:id="@+id/btnFind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Achar" />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Atualizar" />

        <Button
            android:id="@+id/btnDel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Deletar" />
            -->
    </LinearLayout>

    <ListView
        android:id="@+id/listNotas"
        android:layout_width="match_parent"
        android:layout_height="251dp" >

    </ListView>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>